--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Streamr M3tering Stream Viewer</title>
+    <title>M3tering Stream Viewer</title>
     <style>
       * {
         margin: 0;
@@ -13,145 +13,155 @@
       }
 
       body {
-        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+        font-family: "Space Mono", "Courier New", monospace;
+        background: #e8e4d9;
         min-height: 100vh;
-        padding: 20px;
+        padding: 24px;
       }
 
       .container {
         max-width: 1200px;
         margin: 0 auto;
-        background: white;
-        border-radius: 12px;
-        box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
-        overflow: hidden;
+        background: #ffffff;
+        border: 3px solid #1a1a1a;
+        box-shadow: 8px 8px 0 #1a1a1a;
       }
 
       .header {
-        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-        color: white;
-        padding: 30px;
-        text-align: center;
+        background: #ffd803;
+        color: #1a1a1a;
+        padding: 28px 30px;
+        border-bottom: 3px solid #1a1a1a;
       }
 
       .header h1 {
-        font-size: 2em;
-        margin-bottom: 10px;
+        font-size: 2.2em;
+        font-weight: 700;
+        letter-spacing: -1px;
+        text-transform: uppercase;
       }
 
       .header .stream-id {
-        font-size: 0.9em;
-        opacity: 0.9;
+        font-size: 0.8em;
+        font-weight: 500;
         word-break: break-all;
+        margin-top: 8px;
+        background: #1a1a1a;
+        color: #ffd803;
+        padding: 6px 10px;
+        display: inline-block;
       }
 
       .status-bar {
-        padding: 15px 30px;
-        background: #f8f9fa;
-        border-bottom: 1px solid #dee2e6;
+        padding: 16px 30px;
+        background: #ffffff;
+        border-bottom: 3px solid #1a1a1a;
         display: flex;
         justify-content: space-between;
         align-items: center;
         flex-wrap: wrap;
-        gap: 10px;
+        gap: 12px;
       }
 
       .status {
         display: flex;
         align-items: center;
         gap: 10px;
+        font-weight: 700;
+        text-transform: uppercase;
+        font-size: 0.85em;
       }
 
       .status-indicator {
-        width: 12px;
-        height: 12px;
-        border-radius: 50%;
-        background: #dc3545;
-        animation: pulse 2s infinite;
+        width: 14px;
+        height: 14px;
+        border: 2px solid #1a1a1a;
+        background: #ff6b6b;
       }
 
       .status-indicator.connected {
-        background: #28a745;
-      }
-
-      @keyframes pulse {
-        0%,
-        100% {
-          opacity: 1;
-        }
-        50% {
-          opacity: 0.5;
-        }
+        background: #51cf66;
       }
 
       .stats {
         display: flex;
-        gap: 20px;
+        gap: 24px;
         font-size: 0.9em;
-        color: #6c757d;
+        font-weight: 600;
+        text-transform: uppercase;
       }
 
       .stats span {
-        font-weight: bold;
-        color: #495057;
+        font-weight: 800;
+        color: #1a1a1a;
+        background: #a8f0c6;
+        padding: 2px 8px;
+        border: 2px solid #1a1a1a;
       }
 
       .controls {
-        padding: 15px 30px;
-        background: #ffffff;
-        border-bottom: 1px solid #dee2e6;
+        padding: 16px 30px;
+        background: #f0f0f0;
+        border-bottom: 3px solid #1a1a1a;
         display: flex;
-        gap: 10px;
+        gap: 12px;
+        align-items: center;
       }
 
       .btn {
-        padding: 8px 16px;
-        border: none;
-        border-radius: 6px;
+        padding: 10px 20px;
+        border: 3px solid #1a1a1a;
         cursor: pointer;
-        font-size: 0.9em;
-        transition: all 0.3s;
+        font-size: 0.85em;
+        font-weight: 700;
+        text-transform: uppercase;
+        letter-spacing: 0.5px;
+        transition: transform 0.1s, box-shadow 0.1s;
+        box-shadow: 4px 4px 0 #1a1a1a;
+        font-family: inherit;
+      }
+
+      .btn:hover {
+        transform: translate(-2px, -2px);
+        box-shadow: 6px 6px 0 #1a1a1a;
+      }
+
+      .btn:active {
+        transform: translate(2px, 2px);
+        box-shadow: 2px 2px 0 #1a1a1a;
       }
 
       .btn-primary {
-        background: #667eea;
-        color: white;
-      }
-
-      .btn-primary:hover {
-        background: #5568d3;
+        background: #ffd803;
+        color: #1a1a1a;
       }
 
       .btn-secondary {
-        background: #6c757d;
-        color: white;
-      }
-
-      .btn-secondary:hover {
-        background: #5a6268;
+        background: #ffffff;
+        color: #1a1a1a;
       }
 
       .messages-container {
         height: calc(100vh - 400px);
         min-height: 400px;
         overflow-y: auto;
-        padding: 20px 30px;
+        padding: 24px 30px;
+        background: #ffffff;
       }
 
       .message-card {
-        background: #f8f9fa;
-        border-left: 4px solid #667eea;
-        border-radius: 6px;
-        padding: 15px;
-        margin-bottom: 15px;
-        animation: slideIn 0.3s ease-out;
+        background: #ffffff;
+        border: 3px solid #1a1a1a;
+        box-shadow: 5px 5px 0 #1a1a1a;
+        padding: 16px;
+        margin-bottom: 16px;
+        animation: slideIn 0.2s ease-out;
       }
 
       @keyframes slideIn {
         from {
           opacity: 0;
-          transform: translateY(-10px);
+          transform: translateY(-8px);
         }
         to {
           opacity: 1;
@@ -162,23 +172,33 @@
       .message-header {
         display: flex;
         justify-content: space-between;
-        margin-bottom: 10px;
-        font-size: 0.85em;
-        color: #6c757d;
+        margin-bottom: 12px;
+        font-size: 0.8em;
+        font-weight: 600;
+        text-transform: uppercase;
+      }
+
+      .message-header .timestamp {
+        background: #e8e4d9;
+        padding: 4px 8px;
+        border: 2px solid #1a1a1a;
       }
 
       .message-header .m3ter-id {
-        font-weight: bold;
-        color: #667eea;
+        font-weight: 800;
+        background: #a8f0c6;
+        padding: 4px 8px;
+        border: 2px solid #1a1a1a;
+        color: #1a1a1a;
       }
 
       .message-content {
-        font-family: "Courier New", monospace;
+        font-family: "Space Mono", "Courier New", monospace;
         font-size: 0.85em;
         word-break: break-all;
-        background: white;
-        padding: 10px;
-        border-radius: 4px;
+        background: #f5f5f5;
+        padding: 12px;
+        border: 2px solid #1a1a1a;
         max-height: 200px;
         overflow-y: auto;
       }
@@ -186,49 +206,85 @@
       .empty-state {
         text-align: center;
         padding: 60px 20px;
-        color: #6c757d;
+        color: #1a1a1a;
       }
 
       .empty-state svg {
         width: 80px;
         height: 80px;
         margin-bottom: 20px;
-        opacity: 0.5;
+        stroke: #1a1a1a;
+        stroke-width: 2.5;
+      }
+
+      .empty-state h3 {
+        font-size: 1.4em;
+        text-transform: uppercase;
+        font-weight: 800;
+        margin-bottom: 8px;
+      }
+
+      .empty-state p {
+        font-weight: 500;
       }
 
       .footer {
-        padding: 15px 30px;
-        background: #f8f9fa;
-        border-top: 1px solid #dee2e6;
+        padding: 16px 30px;
+        background: #1a1a1a;
         text-align: center;
-        font-size: 0.85em;
-        color: #6c757d;
+        font-size: 0.8em;
+        color: #ffffff;
+        font-weight: 600;
+        text-transform: uppercase;
+        letter-spacing: 1px;
       }
 
       .error-message {
-        background: #f8d7da;
-        border-left-color: #dc3545;
-        color: #721c24;
+        background: #ffe0e0;
+        border-color: #ff6b6b;
+        box-shadow: 5px 5px 0 #ff6b6b;
+      }
+
+      .error-message .message-header .m3ter-id {
+        background: #ff6b6b;
+        color: #ffffff;
       }
 
       .auto-scroll-toggle {
         display: flex;
         align-items: center;
-        gap: 5px;
-        font-size: 0.9em;
+        gap: 8px;
+        font-size: 0.85em;
+        font-weight: 700;
+        text-transform: uppercase;
       }
 
       .auto-scroll-toggle input[type="checkbox"] {
-        width: 16px;
-        height: 16px;
+        width: 18px;
+        height: 18px;
         cursor: pointer;
+        accent-color: #1a1a1a;
+      }
+
+      /* Scrollbar styling */
+      .messages-container::-webkit-scrollbar {
+        width: 12px;
+      }
+
+      .messages-container::-webkit-scrollbar-track {
+        background: #e8e4d9;
+        border-left: 3px solid #1a1a1a;
+      }
+
+      .messages-container::-webkit-scrollbar-thumb {
+        background: #1a1a1a;
       }
     </style>
   </head>
   <body>
     <div class="container">
       <div class="header">
-        <h1>📡 Streamr M3tering Stream Viewer</h1>
+        <h1>M3tering Stream Viewer</h1>
         <div class="stream-id">Stream: 0x567853282663b601bfdb9203819b1fbb3fe18926/m3tering/test</div>
       </div>
       <div class="status-bar">
@@ -353,9 +409,9 @@
           content = data
             .map(
               (item, index) => `
-                <div style="margin-bottom: 10px; padding-bottom: 10px; ${index < data.length - 1 ? "border-bottom: 1px solid #dee2e6;" : ""}">
-                    <div style="font-weight: bold; color: #667eea; margin-bottom: 5px;">M3ter ID: ${item.m3ter_id}</div>
-                    <div>${item.message}</div>
+                <div style="margin-bottom: 12px; padding-bottom: 12px; ${index < data.length - 1 ? "border-bottom: 2px solid #1a1a1a;" : ""}">
+                    <div style="font-weight: 800; background: #ffd803; display: inline-block; padding: 2px 8px; border: 2px solid #1a1a1a; margin-bottom: 6px; text-transform: uppercase; font-size: 0.9em;">M3ter ID: ${item.m3ter_id}</div>
+                    <div style="padding: 4px 0;">${item.message}</div>
                 </div>
             `,
             )
